@@ -1,3 +1,12 @@
+2011-05-06 Jannis Pohlmann <jannis@xfce.org>
+
+	- graph drawing:
+	  - implement a quadtree optimization in the Walshaw algorithm.
+	  - add a simple version of the Hu spring-electrical algorithm that
+	    seems to work almost as good as the Walshaw even without
+		  the multilevel approach implemented (which is the only thing
+		  that really makes the Walshaw algorithm useful).
+
 2011-05-04 Jannis Pohlmann <jannis@xfce.org>
 
 	- graph drawing: 
